Fixed: Added full screen width to images for the meet the team page on mobile

--- a/site-sass/site-specific/site.author.scss
+++ b/site-sass/site-specific/site.author.scss
@@ -1,7 +1,15 @@
 .author-prof-pic {
   img {
-    width: 347px;
+    width: 100%;
+    //height: 195px;
+  }
+
+  @include mq($until:tablet) {
+    margin: 0 -30px;
+    width: 100vw;
+    display: block;
     height: 195px;
+    overflow: hidden
   }
 }
 
